@@ -54,7 +54,6 @@ cmsBool  _cmsRegisterInterpPlugin(cmsPluginBase* Data)
 
 
 // Set the interpolation method
-
 cmsBool _cmsSetInterpolationRoutine(cmsInterpParams* p)
 {
     // Invoke factory, possibly in the Plug-in
